-fix jumps

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  margin-left: calc(100vw - 100%);
+}
+
 a {
   color: inherit;
   text-decoration: none;
